--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,11 @@ dist
 dist-ssr
 *.local
 
+# Environment variables
+.env
+.env.local
+.env.*.local
+
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
@@ -22,5 +27,43 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+# System files
+.cargo/
+.cursor/
+.expo/
+.rustup/
+.qoder/
+.gitconfig
+.node_repl_history
+
+# Windows system files
+NTUSER.DAT*
+ntuser.dat*
+*.regtrans-ms
+ntuser.ini
+AppData/
+Contacts/
+Downloads/
+Favorites/
+IntelGraphicsProfiles/
+Links/
+Music/
+OneDrive/
+Saved Games/
+Searches/
+Videos/
+Documents/
+Local Settings/
+My Documents/
+NetHood/
+PrintHood/
+Recent/
+SendTo/
+Start Menu/
+Templates/
+Application Data/
+Cookies/
+
 
 
